--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -5,6 +5,7 @@ $red: rgb(240, 83, 86);
 $orange: #D66000;
 $darkestblue: rgb(0, 40, 64);
 $blue: #0F6CB6;
+$desktopWidth: 1100px;
 
 @mixin translateAll($x, $y) {
 
