--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -45,6 +45,20 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+i.icon {
+  background-repeat: no-repeat;
+  display: inline-block; }
+  i.icon.i-stats {
+    width: 40px;
+    height: 40px;
+    background-size: 100% 100%; }
+  i.icon.i-in-need {
+    background-image: url(../img/in-need.png); }
+  i.icon.i-targeted {
+    background-image: url(../img/targeted.png); }
+  i.icon.i-fund {
+    background-image: url(../img/fund.png); }
+
 html, body {
   height: 100%; }
 
@@ -235,9 +249,9 @@ a.white-border {
 .c3-tooltip-container {
   color: #333333 !important; }
 
-nav ul li {
+nav ul li, ul.nav li {
   margin-bottom: 10px; }
-  nav ul li a.red-link {
+  nav ul li a.red-link, ul.nav li a.red-link {
     text-decoration: none;
     background-color: #f05356;
     color: white;
@@ -252,11 +266,40 @@ nav ul li {
     -o-transition: background-color .2s, color .2s;
     letter-spacing: 1px;
     font-size: 20px; }
-    nav ul li a.red-link:hover {
+    nav ul li a.red-link:hover, ul.nav li a.red-link:hover {
       color: #003469;
       background-color: white; }
 
+ul.nav li {
+  text-align: left; }
+
 /* universal classes */
+body > div.popup.flipbook-item .popup-content .text-area {
+  padding: 0;
+  margin: 20px; }
+  body > div.popup.flipbook-item .popup-content .text-area p.social-area {
+    z-index: 5000;
+    position: absolute;
+    bottom: 40px; }
+    body > div.popup.flipbook-item .popup-content .text-area p.social-area ul.nav li {
+      text-align: left;
+      margin-bottom: 5px; }
+      body > div.popup.flipbook-item .popup-content .text-area p.social-area ul.nav li a {
+        font-size: 12px;
+        margin-left: 1px; }
+        body > div.popup.flipbook-item .popup-content .text-area p.social-area ul.nav li a.more-link {
+          display: none; }
+  body > div.popup.flipbook-item .popup-content .text-area p.close-area {
+    top: 9px;
+    right: 5px; }
+  body > div.popup.flipbook-item .popup-content .text-area div.popup-text-content {
+    width: calc(100% + 20px);
+    height: calc(100% + 43px);
+    margin-top: -65px;
+    margin-left: -20px; }
+    body > div.popup.flipbook-item .popup-content .text-area div.popup-text-content iframe {
+      width: inherit;
+      height: inherit; }
 body > div.popup > .popup-content {
   border-radius: 4px;
   height: calc(100% - 40px);
@@ -264,6 +307,7 @@ body > div.popup > .popup-content {
   height: -moz-calc(100% - 40px);
   height: -webkit-calc(100% - 40px);
   height: -o-calc(100% - 40px);
+  max-width: 1100px;
   margin-top: 20px; }
   body > div.popup > .popup-content > .text-area {
     width: calc(100% - 40px);
@@ -279,12 +323,90 @@ body > div.popup > .popup-content {
     padding: 20px;
     background: none;
     background: transparent; }
+    body > div.popup > .popup-content > .text-area > .close-area {
+      position: absolute;
+      top: -5px;
+      right: -10px; }
+      body > div.popup > .popup-content > .text-area > .close-area a {
+        font-weight: 800 !important;
+        padding: 2px 7px;
+        background-color: #0092c0;
+        border-radius: 50%;
+        border: solid 4px white;
+        font-size: 15px;
+        font-weight: 800;
+        text-align: center;
+        color: white;
+        box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+        -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+        -moz-box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+        -ms-box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+        -o-box-shadow: 0px 1px 3px rgba(0,0,0,0.3); }
+body > div.popup.map-country > .popup-content > .text-area p.social-area {
+  position: absolute;
+  bottom: 10px; }
+  body > div.popup.map-country > .popup-content > .text-area p.social-area ul.nav li {
+    text-align: left;
+    margin-bottom: 5px; }
+    body > div.popup.map-country > .popup-content > .text-area p.social-area ul.nav li a {
+      font-size: 12px;
+      margin-left: 1px; }
 body > div.popup.map-country > .popup-content > .text-area h1 {
   font-weight: 600;
   font-size: 32px;
   background-color: #0092c0;
   display: inline-block;
   padding: 5px 7px; }
+body > div.popup.map-country > .popup-content > .text-area .popup-text-content .country-text {
+  position: absolute;
+  width: 33%;
+  text-align: left;
+  top: 250px;
+  padding: 5px;
+  background-color: rgba(0, 146, 192, 0.7); }
+  body > div.popup.map-country > .popup-content > .text-area .popup-text-content .country-text p {
+    text-align: left;
+    font-size: 12px; }
+body > div.popup.map-country > .popup-content > .text-area .popup-text-content .country-info-area {
+  width: 33%;
+  float: left;
+  margin-top: 10px;
+  padding: 10px;
+  background-color: rgba(240, 246, 251, 0.8); }
+  body > div.popup.map-country > .popup-content > .text-area .popup-text-content .country-info-area table {
+    width: 100%; }
+    body > div.popup.map-country > .popup-content > .text-area .popup-text-content .country-info-area table tr td {
+      width: 49%; }
+      body > div.popup.map-country > .popup-content > .text-area .popup-text-content .country-info-area table tr td:first-child {
+        margin-right: 0.5%; }
+      body > div.popup.map-country > .popup-content > .text-area .popup-text-content .country-info-area table tr td h3 {
+        text-transform: uppercase;
+        color: #333333;
+        padding: 4px 2px;
+        width: 96%;
+        border: 1px solid #333333;
+        border-width: 1px 0;
+        margin-bottom: 5px;
+        margin-right: 5px;
+        display: inline-block; }
+      body > div.popup.map-country > .popup-content > .text-area .popup-text-content .country-info-area table tr td i.i-stats {
+        vertical-align: middle; }
+      body > div.popup.map-country > .popup-content > .text-area .popup-text-content .country-info-area table tr td span.ctr-amt {
+        color: #0092c0;
+        font-size: 30px;
+        vertical-align: middle;
+        margin-left: 5px; }
+body > div.popup.map-country.push-right > .popup-content > .text-area {
+  text-align: right; }
+  body > div.popup.map-country.push-right > .popup-content > .text-area > .popup-text-content .country-info-area {
+    float: right;
+    text-align: left; }
+  body > div.popup.map-country.push-right > .popup-content > .text-area > .popup-text-content .country-text {
+    right: 20px; }
+  body > div.popup.map-country.push-right > .popup-content > .text-area .social-area {
+    right: 20px; }
+    body > div.popup.map-country.push-right > .popup-content > .text-area .social-area > ul.nav li {
+      text-align: right; }
 body > section.subpage > div.viewport {
   width: 1100px;
   margin-left: 50%;
@@ -369,13 +491,13 @@ section#un-home div.viewport div.video-bg-area {
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); }
   section#un-home div.viewport div.video-bg-area video {
-    width: inherit;
+    width: 100vmax;
     height: inherit; }
 section#un-home div.viewport article#home-chart {
   text-align: left;
   right: 0;
   width: 50%;
-  top: 90px; }
+  top: 140px; }
   section#un-home div.viewport article#home-chart > h3, section#un-home div.viewport article#home-chart > p {
     opacity: 0; }
   section#un-home div.viewport article#home-chart h3 {
@@ -384,18 +506,27 @@ section#un-home div.viewport article#home-chart {
     padding: 3px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-size: 21px;
+    font-size: 19px;
     font-weight: 600;
-    position: absolute;
-    top: 70px; }
+    line-height: 1.3;
+    padding-left: 12px; }
+    section#un-home div.viewport article#home-chart h3 strong {
+      font-size: 26px;
+      font-weight: 800; }
   section#un-home div.viewport article#home-chart #bar-chart {
     width: 100%;
     height: 40%; }
+    section#un-home div.viewport article#home-chart #bar-chart .c3-line {
+      stroke-width: 4px !important; }
+    section#un-home div.viewport article#home-chart #bar-chart .c3-circle {
+      r: 5px;
+      stroke: white; }
   section#un-home div.viewport article#home-chart p {
     padding: 5px;
     background-color: rgba(0, 52, 105, 0.7);
     color: white;
     margin-top: 20px;
-    line-height: 1.3; }
+    line-height: 1.3;
+    font-size: 12px; }
 
 /*# sourceMappingURL=base.css.map */
