--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -34,7 +34,7 @@ body {
       .popup-content {
         .text-area {
           padding: 0;
-          margin: 20px;
+          margin: 40px;
           p.social-area {
             z-index: 5000;
             position: absolute;
@@ -53,10 +53,12 @@ body {
             top: 9px; right: 5px;
           }
           div.popup-text-content {
-            width: calc(100% + 20px);
-            height: calc(100% + 43px);
-            margin-top: -65px;
-            margin-left: -20px;
+            // width: calc(100% + 20px);
+            // height: calc(100% + 43px);
+            @include widthCalc("100% + 40px");
+            @include heightCalc("100% + 63px");
+            margin-top: -85px;
+            margin-left: -40px;
 
             iframe { width: inherit; height: inherit; }
           }
@@ -73,16 +75,16 @@ body {
       margin-top: 20px;
       & > .text-area {
         // width: 100%;
-        @include widthCalc("100% - 40px");
-        @include heightCalc("100% - 40px");
-        padding: 20px;
+        @include widthCalc("100% - 80px");
+        @include heightCalc("100% - 80px");
+        padding: 40px;
         background: none;
         background: transparent;
 
         & > .close-area {
           position: absolute;
-          top: -5px;
-          right: -10px;
+          top: 10px;
+          right: 5px;
           a {
             font-weight: 800 !important;
             padding: 2px 7px;
@@ -103,7 +105,7 @@ body {
       & > .popup-content > .text-area {
         p.social-area {
           position: absolute;
-          bottom: 10px;
+          bottom: 20px;
           ul.nav {
 
             li {
@@ -125,15 +127,15 @@ body {
         .popup-text-content {
           .country-text {
             position: absolute;
-            width: 33%;
+            @include widthCalc("40% - 23px");
             text-align: left;
-            top: 250px;
+            top: 270px;
             padding: 5px;
             background-color: rgba(0,146,192,0.7);
             p { text-align: left; font-size: 12px; }
           }
           .country-info-area {
-            width: 33%;
+            width: 40%;
             float: left;
             margin-top: 10px;
             padding: 10px;
@@ -185,11 +187,11 @@ body {
             text-align: left;
           }
           .country-text {
-            right: 20px;
+            right: 40px;
           }
         } //.popup-text-content
         .social-area {
-          right: 20px;
+          right: 40px;
           & > ul.nav li { text-align: right; }
         }
       }//end of push-right .. .popup-text-content
@@ -255,14 +257,23 @@ body {
 }
 /* section specific classes*/
 section#un-gha-map {
-  background-color: black;
+  background-color: $darkestblue;
   div.viewport {
     width: 100vw;
     article.home-menu, article.home-brand {
-      margin-left: calc( 50% - 550px );
+      // margin-left: calc( 50% - 550px );
+      @include calcAll(margin-left, "50% - 550px");
+    }
+
+    article#backup-map {
+      top: 60px;
+      right: calc(50% - 550px);
+      opacity: 0;
+      z-index: 10;
     }
 
     article#map-container {
+      z-index: 100;
       top: 0;
       left: 0;
       width: 100vw;
@@ -280,6 +291,9 @@ section#un-gha-map {
 section#un-gha-video {
   background-color: $darkestblue;
 
+  article#mobile-video {
+    display: none;
+  }
   article#main-video {
     width: 760px;
     height: 430px;
@@ -290,6 +304,10 @@ section#un-gha-video {
 }
 
 section#un-home {
+  background-color: $darkestblue;
+  background-repeat: no-repeat;
+  background-size: cover;
+
   div.viewport {
     div.video-bg-area {
       position: absolute;
@@ -297,16 +315,41 @@ section#un-home {
       top: 50%;
       @include translateAll(-50%, -50%);
 
+      width: 100vmax;
+      height: 100vmax;
+
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+
       video {
         width: 100vmax;
         height: inherit;
       }
     }
-    article#home-chart {
+    article.home-menu {
+      // width: 340px;
+    }
+    article#home-quote {
+      bottom: 78px;
+      left: 10px;
+      width: 340px;
+      div.about-text-area {
+         p {
+            padding: 5px;
+            background-color: rgba(0,52,105,0.7);
+            color: white;
+            margin-top: 20px;
+            line-height: 1.3;
+            font-size: 12px;
+        }
+      }
+    }
+    article#home-title {
       text-align: left;
       right: 0;
       width: 50%;
-      top: 140px;
+      top: 86px;
 
       & > h3, & > p { opacity: 0; }
       h3 {
@@ -315,7 +358,7 @@ section#un-home {
         padding: 3px;
         text-transform: uppercase;
         letter-spacing: 2px;
-        font-size: 19px;
+        font-size: 24px;
         font-weight: 600;
         line-height: 1.3;
         padding-left: 12px;
@@ -325,6 +368,21 @@ section#un-home {
           font-weight: 800;
         }
       }
+
+      span#in-2016 {
+        font-weight: 600;
+        font-size: 45px;
+        position: absolute;
+        top: 4px;
+        letter-spacing: -4.2px;
+        right: 10px;
+      }
+    }
+    article#home-chart {
+      text-align: left;
+      right: 0;
+      width: 50%;
+      bottom: 50px;
 
       #bar-chart {
         width: 100%;
@@ -337,17 +395,28 @@ section#un-home {
           r: 5px;
           stroke: white;
         }
-      }
-
-      p {
-          padding: 5px;
-          background-color: rgba(0,52,105,0.7);
-          color: white;
-          margin-top: 20px;
-          line-height: 1.3;
-          font-size: 12px;
+        .c3-axis {
+          line { fill: white; stroke: white; }
+          text { fill: white; }
+          path.domain { stroke: white; }
+        }
       }
 
     }
   }
 }
+
+@media screen and (min-width: 1650px) {
+  body > section.subpage > div.viewport {
+    width: 1650px;
+  }
+  body > div.popup > .popup-content { max-width: 1650px; }
+  .zoomable {
+    zoom: 150%;
+  }
+  body > div.popup > .popup-content > .text-area,
+  article.home-menu,
+  article.home-brand { @extend .zoomable; }
+}
+
+@import 'mobile';
