--- a/src/assets/scss/_mobile.scss
+++ b/src/assets/scss/_mobile.scss
@@ -133,6 +133,15 @@
       }
     }
   }
+  section#un-gha-map > div.viewport > article#disclaimer {
+    left: 3px;
+    bottom: 179px;
+    margin-left: 0;
+    opacity: 0.4;
+    width: 183px;
+    text-align: justify;
+    font-size: 8px;
+  }
 
   section#un-gha-map div.viewport article.home-menu, section#un-gha-map div.viewport article.home-brand {
     margin-left: 0;
