--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -204,12 +204,41 @@ body {
       margin-left: 50%;
       @include translateAll(-50%, 0);
 
+      article.footer {
+        bottom: 10px;
+        right: 4px;
+        font-size: 10px;
+        display: inline-block;
+        vertical-align: middle;
+        margin-left: 2px;
+      }
+
       article.home-menu {
         z-index: 500;
         width: 300px;
         position: absolute;
         top: 170px;
         left: 10px;
+
+        .social {
+          position: relative;
+          text-decoration: none;
+          margin-right: 5px;
+          display: inline-block;
+
+          i.off-icon {
+            position: absolute;
+            top: 0;
+            left: 0;
+            opacity: 1;
+            @include compat(transition, "opacity .2s");
+          }
+
+          &:hover i.off-icon{
+            opacity: 0;
+          }
+        }
+
       } //end of article.home-menu
 
       article.home-brand {
@@ -260,9 +289,20 @@ section#un-gha-map {
   background-color: $darkestblue;
   div.viewport {
     width: 100vw;
-    article.home-menu, article.home-brand {
+    article.home-menu, article.home-brand, article#disclaimer {
       // margin-left: calc( 50% - 550px );
       @include calcAll(margin-left, "50% - 550px");
+    }
+    article#disclaimer {
+      z-index: 1000;
+      font-size: 10px;
+      bottom: 5px;
+      left: 20px;
+      width: 440px;
+      opacity: 0.4;
+      strong {
+        font-weight: 600;
+      }
     }
 
     article#backup-map {
