--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -289,6 +289,32 @@ section#un-gha-map {
   background-color: $darkestblue;
   div.viewport {
     width: 100vw;
+    article#regional-area {
+      z-index: 1000;
+      right: 10px;
+      bottom: 30px;
+      background-color: rgba(0, 52, 105, 0.6);
+      padding: 5px;
+      text-align: right;
+
+      h5 {
+        margin-bottom: 10px;
+        font-weight: 600;
+        font-size: 14px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        color: #F05356;
+        text-align: right;
+      }
+
+      ul {
+        li {
+          margin-bottom: 4px;
+          a { color: #0092c0; text-decoration: none; font-size: 14px;}
+        }
+      }
+
+    }
     article.home-menu, article.home-brand, article#disclaimer {
       // margin-left: calc( 50% - 550px );
       @include calcAll(margin-left, "50% - 550px");
@@ -371,7 +397,7 @@ section#un-home {
       // width: 340px;
     }
     article#home-quote {
-      bottom: 78px;
+      bottom: 20px;
       left: 10px;
       width: 340px;
       div.about-text-area {
